Update social media links

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <a href="#projects" class="btn secondary-btn">View Work</a>
         </div>
         <div class="social-links">
-          <a href="https://www.linkedin.com" target="_blank"><img src="assets/images/social-media-icons/linkedin.png"
-              alt="LinkedIn"></a>
-          <a href="https://github.com" target="_blank"><img src="assets/images/social-media-icons/github.png"
-              alt="GitHub"></a>
+          <a href="https://www.linkedin.com/in/purna-sai-korada-b6a634293/" target="_blank"><img
+              src="assets/images/social-media-icons/linkedin.png" alt="LinkedIn"></a>
+          <a href="https://github.com/Thondarock/" target="_blank"><img
+              src="assets/images/social-media-icons/github.png" alt="GitHub"></a>
           <!-- Add other links if available in real life, assuming placeholders or removed if not provided -->
         </div>
       </div>
@@ -350,14 +350,14 @@
             <p>+91 7780411816</p>
           </div>
           <div class="social-links-large">
-            <a href="https://www.linkedin.com" target="_blank"><img src="assets/images/social-media-icons/linkedin.png"
-                alt="LinkedIn"></a>
-            <a href="mailto:siddhukorda756@gmail.com"><img src="assets/images/social-media-icons/whatsapp.png"
+            <a href="https://www.linkedin.com/in/purna-sai-korada-b6a634293/" target="_blank"><img
+                src="assets/images/social-media-icons/linkedin.png" alt="LinkedIn"></a>
+            <a href="https://wa.link/tjywpp" target="_blank"><img src="assets/images/social-media-icons/whatsapp.png"
                 alt="WhatsApp"></a>
-            <a href="https://twitter.com" target="_blank"><img src="assets/images/social-media-icons/twitter.png"
+            <a href="https://x.com/Thonda420" target="_blank"><img src="assets/images/social-media-icons/twitter.png"
                 alt="Twitter"></a>
-            <a href="https://instagram.com" target="_blank"><img src="assets/images/social-media-icons/instagram.svg"
-                alt="Instagram"></a>
+            <a href="https://www.instagram.com/thonda______rock______/" target="_blank"><img
+                src="assets/images/social-media-icons/instagram.svg" alt="Instagram"></a>
           </div>
         </div>
       </div>
